[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/template/entities.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/world/grass.tres" type="TileSet" id=2]
[ext_resource path="res://assets/world/wall.tres" type="TileSet" id=3]
[ext_resource path="res://assets/world/plants.tres" type="TileSet" id=4]
[ext_resource path="res://function/scenes/lvl1.gd" type="Script" id=5]
[ext_resource path="res://scenes/template/hud.tscn" type="PackedScene" id=6]

[sub_resource type="Animation" id=1]
resource_name = "fade"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "fadeSecret"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("secretWall:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="lvl1" type="Node2D"]
script = ExtResource( 5 )

[node name="animPlayer" type="AnimationPlayer" parent="."]
anims/fade = SubResource( 1 )
anims/fadeSecret = SubResource( 2 )

[node name="ground" type="TileMap" parent="."]
position = Vector2( 0, -24 )
scale = Vector2( 2, 2 )
tile_set = ExtResource( 2 )
cell_size = Vector2( 32, 32 )
collision_layer = 0
collision_mask = 0
format = 1
tile_data = PoolIntArray( 0, 0, 65536, 1, 0, 131072, 2, 0, 131072, 3, 0, 131073, 4, 0, 196608, 5, 0, 65539, 6, 0, 196609, 7, 0, 0, 8, 0, 65536, 9, 0, 65536, 10, 0, 131073, 11, 0, 131073, 12, 0, 1, 13, 0, 65537, 14, 0, 65538, 15, 0, 0, 16, 0, 6, 17, 0, 131075, 18, 0, 0, 19, 0, 131077, 65536, 0, 131073, 65537, 0, 65539, 65538, 0, 0, 65539, 0, 196611, 65540, 0, 65539, 65541, 0, 196610, 65542, 0, 131075, 65543, 0, 0, 65544, 0, 131074, 65545, 0, 131074, 65546, 0, 196611, 65547, 0, 196614, 65548, 0, 65539, 65549, 0, 2, 65550, 0, 196610, 65551, 0, 196609, 65552, 0, 131072, 65553, 0, 0, 65554, 0, 2, 65555, 0, 0, 131072, 0, 196610, 131073, 0, 196611, 131074, 0, 196613, 131075, 0, 65536, 131076, 0, 5, 131077, 0, 2, 131078, 0, 65536, 131079, 0, 196608, 131080, 0, 0, 131081, 0, 65539, 131082, 0, 196608, 131083, 0, 65536, 131084, 0, 65538, 131085, 0, 131074, 131086, 0, 196609, 131087, 0, 3, 131088, 0, 196611, 131089, 0, 65538, 131090, 0, 65536, 131091, 0, 196611, 196608, 0, 65536, 196609, 0, 1, 196610, 0, 65538, 196611, 0, 65537, 196612, 0, 0, 196613, 0, 196609, 196614, 0, 196610, 196615, 0, 196609, 196616, 0, 3, 196617, 0, 3, 196618, 0, 131073, 196619, 0, 2, 196620, 0, 131072, 196621, 0, 65542, 196622, 0, 131073, 196623, 0, 0, 196624, 0, 131072, 196625, 0, 0, 196626, 0, 131074, 196627, 0, 0, 262144, 0, 131073, 262145, 0, 0, 262146, 0, 131078, 262147, 0, 131075, 262148, 0, 0, 262149, 0, 131074, 262150, 0, 196608, 262151, 0, 0, 262152, 0, 131075, 262153, 0, 196609, 262154, 0, 1, 262155, 0, 0, 262156, 0, 65538, 262157, 0, 131072, 262158, 0, 65536, 262159, 0, 196610, 262160, 0, 0, 262161, 0, 131073, 262162, 0, 0, 262163, 0, 0, 327680, 0, 0, 327681, 0, 131072, 327682, 0, 196608, 327683, 0, 65537, 327684, 0, 196609, 327685, 0, 65536, 327686, 0, 131073, 327687, 0, 3, 327688, 0, 65536, 327689, 0, 131074, 327690, 0, 65537, 327691, 0, 0, 327692, 0, 65538, 327693, 0, 65536, 327694, 0, 65539, 327695, 0, 131074, 327696, 0, 196608, 327697, 0, 65543, 327698, 0, 0, 327699, 0, 65536, 393216, 0, 3, 393217, 0, 65537, 393218, 0, 131075, 393219, 0, 196611, 393220, 0, 131072, 393221, 0, 1, 393222, 0, 196611, 393223, 0, 131074, 393224, 0, 196610, 393225, 0, 196610, 393226, 0, 1, 393227, 0, 65536, 393228, 0, 196611, 393229, 0, 196610, 393230, 0, 131074, 393231, 0, 0, 393232, 0, 131074, 393233, 0, 65543, 393234, 0, 131072, 393235, 0, 0, 458752, 0, 131076, 458753, 0, 131075, 458754, 0, 131075, 458755, 0, 131072, 458756, 0, 131075, 458757, 0, 131074, 458758, 0, 0, 458759, 0, 3, 458760, 0, 131073, 458761, 0, 1, 458762, 0, 196608, 458763, 0, 65539, 458764, 0, 3, 458765, 0, 131078, 458766, 0, 7, 458767, 0, 131077, 458768, 0, 131072, 458769, 0, 0, 458770, 0, 196612, 458771, 0, 196610, 524288, 0, 0, 524289, 0, 65536, 524290, 0, 131072, 524291, 0, 196613, 524292, 0, 196611, 524293, 0, 131074, 524294, 0, 196611, 524295, 0, 2, 524296, 0, 0, 524297, 0, 131075, 524298, 0, 196611, 524299, 0, 0, 524300, 0, 196610, 524301, 0, 131072, 524302, 0, 65538, 524303, 0, 65537, 524304, 0, 0, 524305, 0, 196610, 524306, 0, 0, 524307, 0, 7, 589824, 0, 196609, 589825, 0, 131073, 589826, 0, 3, 589827, 0, 131074, 589828, 0, 2, 589829, 0, 65541, 589830, 0, 65539, 589831, 0, 196613, 589832, 0, 0, 589833, 0, 196612, 589834, 0, 131074, 589835, 0, 0, 589836, 0, 131075, 589837, 0, 131073, 589838, 0, 65536, 589839, 0, 196611, 589840, 0, 65540, 589841, 0, 131072, 589842, 0, 196608, 589843, 0, 196611, 655360, 0, 3, 655361, 0, 3, 655362, 0, 1, 655363, 0, 0, 655364, 0, 196611, 655365, 0, 1, 655366, 0, 131073, 655367, 0, 196608, 655368, 0, 131075, 655369, 0, 0, 655370, 0, 0, 655371, 0, 65543, 655372, 0, 131075, 655373, 0, 131073, 655374, 0, 131075, 655375, 0, 1, 655376, 0, 131076, 655377, 0, 196609, 655378, 0, 65538, 655379, 0, 3 )

[node name="entities" parent="." instance=ExtResource( 1 )]

[node name="playerStart" type="Position2D" parent="entities"]
position = Vector2( 672, 640 )

[node name="secondHandStart" type="Position2D" parent="entities"]
position = Vector2( 672, 488 )

[node name="minuteHandStart" type="Position2D" parent="entities"]
position = Vector2( 256, 320 )

[node name="hourHandStart" type="Position2D" parent="entities"]
position = Vector2( 1024, 320 )

[node name="groundTop" type="TileMap" parent="."]
position = Vector2( 0, -24 )
scale = Vector2( 2, 2 )
tile_set = ExtResource( 2 )
cell_size = Vector2( 32, 32 )
collision_layer = 0
collision_mask = 0
format = 1
tile_data = PoolIntArray( 720896, 0, 131075, 720897, 0, 65537, 720898, 0, 196609, 720899, 0, 65537, 720900, 0, 0, 720901, 0, 65537, 720902, 0, 0, 720903, 0, 0, 720904, 0, 196609, 720905, 0, 131075, 720906, 0, 131075, 720907, 0, 196611, 720908, 0, 1, 720909, 0, 131075, 720910, 0, 131075, 720911, 0, 131074, 720912, 0, 196610, 720913, 0, 4, 720914, 0, 131075, 720915, 0, 65537 )

[node name="wall" type="TileMap" parent="."]
position = Vector2( 0, -24 )
scale = Vector2( 2, 2 )
tile_set = ExtResource( 3 )
cell_size = Vector2( 32, 32 )
collision_layer = 0
format = 1
tile_data = PoolIntArray( 720896, 23, 0, 720897, 25, 0, 720898, 25, 0, 720899, 36, 0, 720900, 26, 0, 720901, 26, 0, 720902, 35, 0, 720903, 36, 0, 720904, 34, 0, 720905, 25, 0, 720906, 25, 0, 720907, 36, 0, 720908, 34, 0, 720909, 25, 0, 720910, 35, 0, 720911, 34, 0, 720912, 36, 0, 720913, 25, 0, 720914, 25, 0, 720915, 35, 0 )

[node name="plant" type="TileMap" parent="."]
position = Vector2( 0, -24 )
scale = Vector2( 2, 2 )
tile_set = ExtResource( 4 )
cell_size = Vector2( 8, 8 )
collision_layer = 0
format = 1
tile_data = PoolIntArray( 2490442, 0, 0, 2818041, 1, 0, 2752561, 2, 0, 2883645, 4, 0, 2949127, 7, 0, 2949128, 4, 0, 2949144, 2, 0, 2949155, 8, 0, 2949183, 4, 0, 3014666, 3, 0, 3014694, 8, 0, 3014716, 3, 0, 3014717, 4, 0 )

[node name="hud" parent="." instance=ExtResource( 6 )]
